@@ -13,12 +13,16 @@
 
 	<H3 _HD_OMIT_TOC>Changes</H3>
 
-	<LI>Updated local PNG library to version 1.6.10.</LI>
+	<LI>Updated local PNG library to version 1.6.20.</LI>
+	<LI>Updated local JPEG library to version 9b.</LI>
 	<LI>Added configure script support for libjpeg-turbo.</LI>
+	<LI>Updated HTTP code to latest CUPS/ippsample sources.</LI>
+	<LI>Duplex PDF output incorrectly forced an even number of pages (Bug #525)</LI>
 
 	<H3 _HD_OMIT_TOC>Bug Fixes</H3>
 
-	<LI>Fixed reported build issues (Bug #500)</Li>
+	<LI>The table of contents showed the wrong page numbers after headings containing the _HD_OMIT_TOC attribute.</LI>
+	<LI>Fixed reported build issues (Bug #500, Bug #507, Bug #510, Bug #533)</Li>
 	<LI>The configure script's --enable-local* options did not work.</LI>
 
 </UL>
