@@ -1,7 +1,7 @@
 <html>
 <body>
 
-<!-- FOOTER RIGHT "1-$CHAPTERPAGE" -->
+<!-- FOOTER RIGHT "D-$CHAPTERPAGE" -->
 <div align='justify'>
 
 <h1 align='right'><a name='COMPILE'>Appendix D - Compiling
