@@ -1088,7 +1088,7 @@
 					"_GLIBCXX_DEBUG=1",
 					"_GLIBCXX_DEBUG_PEDANTIC=1",
 				);
-				INSTALL_PATH = /usr/bin;
+				INSTALL_PATH = /usr/local/bin;
 				PRODUCT_NAME = htmldoc;
 				ZERO_LINK = YES;
 			};
@@ -1100,7 +1100,7 @@
 				CODE_SIGN_IDENTITY = "Mac Developer";
 				DEBUG_INFORMATION_FORMAT = "dwarf-with-dsym";
 				GCC_MODEL_TUNING = G5;
-				INSTALL_PATH = /usr/bin;
+				INSTALL_PATH = /usr/local/bin;
 				PRODUCT_NAME = htmldoc;
 			};
 			name = Release;
@@ -1226,7 +1226,7 @@
 				COPY_PHASE_STRIP = NO;
 				GCC_DYNAMIC_NO_PIC = NO;
 				GCC_OPTIMIZATION_LEVEL = 0;
-				INSTALL_PATH = /usr/share/htmldoc/fonts;
+				INSTALL_PATH = /usr/local/share/htmldoc/fonts;
 				PRODUCT_NAME = fonts;
 				SKIP_INSTALL = NO;
 			};
@@ -1238,7 +1238,7 @@
 				COPY_PHASE_STRIP = YES;
 				DEBUG_INFORMATION_FORMAT = "dwarf-with-dsym";
 				GCC_ENABLE_FIX_AND_CONTINUE = NO;
-				INSTALL_PATH = /usr/share/htmldoc/fonts;
+				INSTALL_PATH = /usr/local/share/htmldoc/fonts;
 				PRODUCT_NAME = fonts;
 				SKIP_INSTALL = NO;
 				ZERO_LINK = NO;
@@ -1251,7 +1251,7 @@
 				COPY_PHASE_STRIP = NO;
 				GCC_DYNAMIC_NO_PIC = NO;
 				GCC_OPTIMIZATION_LEVEL = 0;
-				INSTALL_PATH = /usr/share/htmldoc/data;
+				INSTALL_PATH = /usr/local/share/htmldoc/data;
 				PRODUCT_NAME = "data files";
 				SKIP_INSTALL = NO;
 			};
@@ -1263,7 +1263,7 @@
 				COPY_PHASE_STRIP = YES;
 				DEBUG_INFORMATION_FORMAT = "dwarf-with-dsym";
 				GCC_ENABLE_FIX_AND_CONTINUE = NO;
-				INSTALL_PATH = /usr/share/htmldoc/data;
+				INSTALL_PATH = /usr/local/share/htmldoc/data;
 				PRODUCT_NAME = "data files";
 				SKIP_INSTALL = NO;
 				ZERO_LINK = NO;
